--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
-spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/sa
 spring.datasource.username=root
 spring.datasource.password=Art556_32
+
+spring.jpa.hibernate.ddl-auto=update
+
+# App Properties
+senai.app.jwtSecret= senaiSecretKey
+senai.app.jwtExpirationMs= 86400000
