--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/sa
-spring.datasource.username=root
-spring.datasource.password=Art556_32
+spring.datasource.url=${DATABASE_URL_PROD:jdbc:mysql://localhost:3306/sa}
+spring.datasource.username=${DATABASE_USERNAME:root}
+spring.datasource.password=${DATABASE_PASSWORD:123}
 
 spring.jpa.hibernate.ddl-auto=update
 
